# harperbot

./: .gitignore  .pre-commit-config.yaml  GITHUB_APP_SETUP.md  LICENSE  README.md  pyproject.toml  setup-checksums.sha256
.github/workflows/: harperbot.yml
api/: webhook.py
docs/: README.md
harperbot/: HarperBot.md  config.yaml  harperbot.py  harperbot_apply.py  manual.js  suggestions.js
test/: test_harperbot.py
