[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harperbot"
version = "0.1.0"
description = "GitHub PR Bot with Gemini AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "requests",
    "PyGithub",
    "python-dotenv",
    "google-genai",
    "PyYAML",
    "mkdocs",
    "mkdocs-include-markdown-plugin"
]

[project.scripts]
harperbot = "harperbot.harperbot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harperbot*"]
